spacing issue modal

--- a/frontend/src/pages/BusRoutes/BusRoutes.module.css
+++ b/frontend/src/pages/BusRoutes/BusRoutes.module.css
@@ -174,6 +174,7 @@
     border-radius: 8px;
     width: 70%;
     max-width: 400px;
+    gap: 5px;
   }
   
   .modalTitle {
@@ -194,7 +195,11 @@
     color: #333;
     background-color: white;
   }
-  
+  .modalInputGroup{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
   .modalActions {
     display: flex;
     justify-content: space-between;
